--- a/01_get_started.ipynb
+++ b/01_get_started.ipynb
@@ -58,55 +58,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "14676015-31c3-48a5-891c-4fa4af9be7f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Fetching data for house = 15'"
+       "'Loading data for house = 2'"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Loading data for house = 3'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'House number = 14 does not exist.'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 13.3 s\n"
+     ]
     }
    ],
    "source": [
     "%%time\n",
-    "# HOUSE2 = refit.get_house_data(2)\n",
-    "# HOUSE3 = refit.get_house_data(3)\n",
-    "HOUSE15 = refit.get_house_data(15)"
+    "house2 = refit.get_house_data(2)\n",
+    "house3 = refit.get_house_data(3)\n",
+    "house14 = refit.get_house_data(14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "61c7cfdb-db72-47fb-b992-d4ad77af8a05",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Loading data for appliance KETTLE'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'House number = 1 does not have kettle'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching KETTLE data for House 2'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'House number = 14 does not exist.'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fetching KETTLE data for House 15'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 14.1 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "KETTLE = refit.get_appliance_data('Kettle', houses=[1, 2, 14, 15])"
+    "kettle = refit.get_appliance_data('Kettle', houses=[1, 2, 14, 15])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "7099000b-2850-4e46-9077-cc12c9506099",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unix</th>\n",
+       "      <th>aggregate</th>\n",
+       "      <th>toaster</th>\n",
+       "      <th>fridge-freezer</th>\n",
+       "      <th>freezer</th>\n",
+       "      <th>tumbledryer</th>\n",
+       "      <th>dishwasher</th>\n",
+       "      <th>washingmachine</th>\n",
+       "      <th>television</th>\n",
+       "      <th>microwave</th>\n",
+       "      <th>kettle</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-09-25 19:21:09</th>\n",
+       "      <td>1380136869</td>\n",
+       "      <td>387</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-25 19:21:16</th>\n",
+       "      <td>1380136876</td>\n",
+       "      <td>386</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-25 19:21:23</th>\n",
+       "      <td>1380136883</td>\n",
+       "      <td>383</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-25 19:21:30</th>\n",
+       "      <td>1380136890</td>\n",
+       "      <td>388</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-25 19:21:37</th>\n",
+       "      <td>1380136897</td>\n",
+       "      <td>388</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>86</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>145</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-06-02 10:55:14</th>\n",
+       "      <td>1433242514</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-06-02 10:55:21</th>\n",
+       "      <td>1433242521</td>\n",
+       "      <td>2435</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1841</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-06-02 10:55:28</th>\n",
+       "      <td>1433242528</td>\n",
+       "      <td>2453</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1828</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-06-02 10:55:35</th>\n",
+       "      <td>1433242535</td>\n",
+       "      <td>2733</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-06-02 10:55:42</th>\n",
+       "      <td>1433242542</td>\n",
+       "      <td>2638</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6994594 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           unix  aggregate  toaster  fridge-freezer  freezer  \\\n",
+       "time                                                                           \n",
+       "2013-09-25 19:21:09  1380136869        387        0               0       86   \n",
+       "2013-09-25 19:21:16  1380136876        386        0               0       86   \n",
+       "2013-09-25 19:21:23  1380136883        383        0               0       86   \n",
+       "2013-09-25 19:21:30  1380136890        388        0               0       87   \n",
+       "2013-09-25 19:21:37  1380136897        388        0               0       86   \n",
+       "...                         ...        ...      ...             ...      ...   \n",
+       "2015-06-02 10:55:14  1433242514       2674        0               0        0   \n",
+       "2015-06-02 10:55:21  1433242521       2435        0               0        0   \n",
+       "2015-06-02 10:55:28  1433242528       2453        0               0        0   \n",
+       "2015-06-02 10:55:35  1433242535       2733        0               0        0   \n",
+       "2015-06-02 10:55:42  1433242542       2638        0               0        0   \n",
+       "\n",
+       "                     tumbledryer  dishwasher  washingmachine  television  \\\n",
+       "time                                                                       \n",
+       "2013-09-25 19:21:09            0           0               0         145   \n",
+       "2013-09-25 19:21:16            0           0               0         144   \n",
+       "2013-09-25 19:21:23            0           0               0         144   \n",
+       "2013-09-25 19:21:30            0           0               0         145   \n",
+       "2013-09-25 19:21:37            0           0               0         145   \n",
+       "...                          ...         ...             ...         ...   \n",
+       "2015-06-02 10:55:14            0           0            1994           0   \n",
+       "2015-06-02 10:55:21            0           0            1841           0   \n",
+       "2015-06-02 10:55:28            0           0            1828           0   \n",
+       "2015-06-02 10:55:35            0           0            1972           0   \n",
+       "2015-06-02 10:55:42            0           0               3           0   \n",
+       "\n",
+       "                     microwave  kettle  \n",
+       "time                                    \n",
+       "2013-09-25 19:21:09          0       0  \n",
+       "2013-09-25 19:21:16          0       0  \n",
+       "2013-09-25 19:21:23          0       0  \n",
+       "2013-09-25 19:21:30          0       0  \n",
+       "2013-09-25 19:21:37          0       0  \n",
+       "...                        ...     ...  \n",
+       "2015-06-02 10:55:14          0       0  \n",
+       "2015-06-02 10:55:21          0       0  \n",
+       "2015-06-02 10:55:28          0       0  \n",
+       "2015-06-02 10:55:35          0       0  \n",
+       "2015-06-02 10:55:42          0       0  \n",
+       "\n",
+       "[6994594 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "HOUSE15"
+    "house3"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a56f881-8732-4c0f-8c87-a3401b987b15",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
