--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -17,39 +17,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Followings are the general configuration of your experiment..'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Followings are the general configuration of your experiment..\n",
       "{'DATA_FOLDER': 'data/refit/', 'DATA_TYPE': '.csv', 'README_FILE': 'data/refit/REFIT_Readme.txt', 'REFIT_HOUSES': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]}\n",
-      "\n"
+      "\n",
+      "Loading specified buildings: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]\n",
+      "Parsing the readme file specified: data/refit/REFIT_Readme.txt\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Loading specified buildings: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Parsing the readme file specified: data/refit/REFIT_Readme.txt'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -63,37 +39,13 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Loading data for house = 2'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Loading data for house = 3'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'House number = 14 does not exist.'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 13.3 s\n"
+      "Loading data for house = 2\n",
+      "Loading data for house = 3\n",
+      "House number = 14 does not exist.\n",
+      "Wall time: 11.8 s\n"
      ]
     }
    ],
@@ -111,55 +63,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Loading data for appliance KETTLE'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'House number = 1 does not have kettle'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Fetching KETTLE data for House 2'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'House number = 14 does not exist.'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Fetching KETTLE data for House 15'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 14.1 s\n"
+      "Loading data for appliance KETTLE\n",
+      "\n",
+      "House number = 1 does not have kettle\n",
+      "Fetching KETTLE data for House 2\n",
+      "House number = 14 does not exist.\n",
+      "Fetching KETTLE data for House 15\n",
+      "Wall time: 11.4 s\n"
      ]
     }
    ],
@@ -170,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "7099000b-2850-4e46-9077-cc12c9506099",
    "metadata": {},
    "outputs": [
@@ -428,7 +341,7 @@
        "[6994594 rows x 11 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,6 +349,14 @@
    "source": [
     "house3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be4a5f21-970e-4349-be1b-7083fd029d78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
