fetch_appliances added

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -53,7 +53,7 @@
       "Loading data for house = 2\n",
       "Loading data for house = 3\n",
       "House number = 14 does not exist.\n",
-      "Wall time: 12.8 s\n"
+      "Wall time: 13.4 s\n"
      ]
     }
    ],
@@ -230,6 +230,52 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f417bdc7-6682-4c2a-9ed8-ebd9c23043dc",
+   "metadata": {},
+   "source": [
+    "## Fetch available appliances for a selected house"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dcd62c84-332e-4f00-a86c-430577f680a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching appliances for house = 2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['unix',\n",
+       " 'aggregate',\n",
+       " 'fridge-freezer',\n",
+       " 'washingmachine',\n",
+       " 'dishwasher',\n",
+       " 'television',\n",
+       " 'microwave',\n",
+       " 'toaster',\n",
+       " 'hi-fi',\n",
+       " 'kettle',\n",
+       " 'ovenextractorfan']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "refit.get_appliance_names(house_number=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ffe78cf8-ba70-4e55-a7e3-58b73612443b",
    "metadata": {},
    "source": [
@@ -238,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "61c7cfdb-db72-47fb-b992-d4ad77af8a05",
    "metadata": {},
    "outputs": [
@@ -263,7 +309,7 @@
       "Fetching KETTLE data for House 17\n",
       "Fetching KETTLE data for House 19\n",
       "Fetching KETTLE data for House 20\n",
-      "Wall time: 1min 38s\n"
+      "Wall time: 1min 52s\n"
      ]
     }
    ],
@@ -274,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "bfb771ba-4694-4bce-bf0f-47862c1f61c2",
    "metadata": {},
    "outputs": [
@@ -348,7 +394,7 @@
        "2013-09-17 22:08:42        700       0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "245b4628-ffb2-476e-9f24-8666859a7c0d",
    "metadata": {},
    "outputs": [
@@ -381,7 +427,7 @@
       "Fetching KETTLE data for House 2\n",
       "House number = 14 does not exist.\n",
       "Fetching KETTLE data for House 15\n",
-      "Wall time: 21.3 s\n"
+      "Wall time: 21.6 s\n"
      ]
     }
    ],
@@ -392,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0c4d0e93-d359-49a2-8cea-b7fcb6758a64",
    "metadata": {},
    "outputs": [
@@ -466,7 +512,7 @@
        "2013-12-17 17:25:18        241       0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,6 +520,14 @@
    "source": [
     "kettle[15].head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "811396c8-af5a-4f6a-b647-33730861a5f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
