sampling for appliances added

--- a/02_sampling.ipynb
+++ b/02_sampling.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "2e85564f-2c8a-4f13-b968-aeb7c0323be4",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching appliances for house = 2\n"
+      "Fetching appliances for house = 3\n"
      ]
     },
     {
@@ -58,24 +58,24 @@
       "text/plain": [
        "['unix',\n",
        " 'aggregate',\n",
+       " 'toaster',\n",
        " 'fridge-freezer',\n",
-       " 'washingmachine',\n",
+       " 'freezer',\n",
+       " 'tumbledryer',\n",
        " 'dishwasher',\n",
+       " 'washingmachine',\n",
        " 'television',\n",
        " 'microwave',\n",
-       " 'toaster',\n",
-       " 'hi-fi',\n",
-       " 'kettle',\n",
-       " 'ovenextractorfan']"
+       " 'kettle']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "refit.get_appliance_names(house_number=2)"
+    "refit.get_appliance_names(house_number=3)"
    ]
   },
   {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "id": "245b4628-ffb2-476e-9f24-8666859a7c0d",
    "metadata": {},
    "outputs": [
@@ -99,18 +99,19 @@
       "Loading data for appliance WASHINGMACHINE\n",
       "\n",
       "Fetching WASHINGMACHINE data for House 2\n",
-      "Wall time: 8.21 s\n"
+      "Fetching WASHINGMACHINE data for House 3\n",
+      "Wall time: 15.3 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "washing_machine = refit.get_appliance_data('washingmachine', houses=[2])"
+    "washing_machine = refit.get_appliance_data('washingmachine', houses=[2,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "id": "819721f4-a7dd-4b69-8272-409d7b57f497",
    "metadata": {},
    "outputs": [],
