sampling class added

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "04e04564-120b-45d4-9b89-d25f25420603",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fd768483-abd0-42e5-a488-045e0f505f35",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
     }
    ],
    "source": [
-    "kettle[2].head()"
+    "kettle.data[2].head()"
    ]
   },
   {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "245b4628-ffb2-476e-9f24-8666859a7c0d",
    "metadata": {},
    "outputs": [
@@ -427,7 +427,7 @@
       "Fetching KETTLE data for House 2\n",
       "House number = 14 does not exist.\n",
       "Fetching KETTLE data for House 15\n",
-      "Wall time: 21.6 s\n"
+      "Wall time: 7.42 s\n"
      ]
     }
    ],
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "0c4d0e93-d359-49a2-8cea-b7fcb6758a64",
    "metadata": {},
    "outputs": [
@@ -512,13 +512,13 @@
        "2013-12-17 17:25:18        241       0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kettle[15].head()"
+    "kettle.data[15].head()"
    ]
   },
   {
