sampling main file modified

--- a/02_sampling.ipynb
+++ b/02_sampling.ipynb
@@ -69,6 +69,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81a0ceb7",
+   "metadata": {},
+   "source": [
+    "## Resample data of selected houses"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ee53c71b-8eb3-4513-b542-95b82153f577",
@@ -76,7 +84,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "washing_machine.resample()"
+    "washing_machine.resample(sampling_period='8s', fill_value=0.0, window_limit=3.0)"
    ]
   },
   {
@@ -97,34 +105,6 @@
    "outputs": [],
    "source": [
     "washing_machine.data[2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "44d2a636-a425-405e-9538-bf8e33cbcffa",
-   "metadata": {},
-   "source": [
-    "## Sample Case"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c05d1fa1-7c63-4d60-a014-1f7da795bad7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "washing_machine.data[2]['aggregate'].loc['2013-09-19 06': '2013-09-19 14'].plot(figsize=(20,7))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b166b32b-e013-4374-a9a3-ca96fdf66994",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "washing_machine_unsampled.data[2]['aggregate'].loc['2013-09-19 06:00': '2013-09-19 14:47'].plot(figsize=(20,7))"
    ]
   },
   {
