sampling in progress

--- a/02_sampling.ipynb
+++ b/02_sampling.ipynb
@@ -73,7 +73,7 @@
    "id": "81a0ceb7",
    "metadata": {},
    "source": [
-    "## Resample data of selected houses"
+    "## Resample data "
    ]
   },
   {
