refit data class added

--- a/01_getting_started.ipynb
+++ b/01_getting_started.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "04e04564-120b-45d4-9b89-d25f25420603",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fd768483-abd0-42e5-a488-045e0f505f35",
    "metadata": {},
    "outputs": [
@@ -24,11 +24,13 @@
       "{'DATA_FOLDER': 'data/refit/', 'DATA_TYPE': '.csv', 'README_FILE': 'data/refit/REFIT_Readme.txt', 'REFIT_HOUSES': [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]}\n",
       "\n",
       "Loading specified buildings: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 19, 20, 21]\n",
-      "Parsing the readme file specified: data/refit/REFIT_Readme.txt\n"
+      "Parsing the readme file specified: data/refit/REFIT_Readme.txt\n",
+      "Wall time: 1.04 s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
     "refit = REFIT_Loader()"
    ]
   },
@@ -53,7 +55,7 @@
       "Loading data for house = 2\n",
       "Loading data for house = 3\n",
       "House number = 14 does not exist.\n",
-      "Wall time: 13.4 s\n"
+      "Wall time: 16.3 s\n"
      ]
     }
    ],
@@ -67,6 +69,27 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "daa77d0b-2d92-4c61-afa1-9f80538fd0b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(house2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "79e3d12e-5a64-477f-bdd0-e700879dda64",
    "metadata": {},
    "outputs": [
@@ -219,7 +242,7 @@
        "2013-09-17 22:08:42       0                 0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dcd62c84-332e-4f00-a86c-430577f680a3",
    "metadata": {},
    "outputs": [
@@ -265,7 +288,7 @@
        " 'ovenextractorfan']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "61c7cfdb-db72-47fb-b992-d4ad77af8a05",
    "metadata": {},
    "outputs": [
@@ -294,113 +317,36 @@
      "text": [
       "Loading data for appliance KETTLE\n",
       "\n",
+      "House number = 1 does not have kettle\n",
       "Fetching KETTLE data for House 2\n",
       "Fetching KETTLE data for House 3\n",
-      "Fetching KETTLE data for House 4\n",
-      "Fetching KETTLE data for House 5\n",
-      "Fetching KETTLE data for House 6\n",
-      "Fetching KETTLE data for House 7\n",
-      "Fetching KETTLE data for House 8\n",
-      "Fetching KETTLE data for House 9\n",
-      "Fetching KETTLE data for House 11\n",
-      "Fetching KETTLE data for House 12\n",
-      "Fetching KETTLE data for House 13\n",
-      "Fetching KETTLE data for House 15\n",
-      "Fetching KETTLE data for House 17\n",
-      "Fetching KETTLE data for House 19\n",
-      "Fetching KETTLE data for House 20\n",
-      "Wall time: 1min 52s\n"
+      "Wall time: 14.5 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "kettle = refit.get_appliance_data('Kettle')"
+    "kettle = refit.get_appliance_data('Kettle', houses=[1,2,3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bfb771ba-4694-4bce-bf0f-47862c1f61c2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>aggregate</th>\n",
-       "      <th>kettle</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:11</th>\n",
-       "      <td>695</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:18</th>\n",
-       "      <td>694</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:26</th>\n",
-       "      <td>694</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:34</th>\n",
-       "      <td>702</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-09-17 22:08:42</th>\n",
-       "      <td>700</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     aggregate  kettle\n",
-       "time                                  \n",
-       "2013-09-17 22:08:11        695       0\n",
-       "2013-09-17 22:08:18        694       0\n",
-       "2013-09-17 22:08:26        694       0\n",
-       "2013-09-17 22:08:34        702       0\n",
-       "2013-09-17 22:08:42        700       0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kettle.data[2].head()"
+    "type(kettle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1202999b-bb4d-4760-9618-45373e74f225",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kettle.resample()"
    ]
   },
   {
@@ -413,24 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "245b4628-ffb2-476e-9f24-8666859a7c0d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data for appliance KETTLE\n",
-      "\n",
-      "House number = 1 does not have kettle\n",
-      "Fetching KETTLE data for House 2\n",
-      "House number = 14 does not exist.\n",
-      "Fetching KETTLE data for House 15\n",
-      "Wall time: 7.42 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "kettle = refit.get_appliance_data('Kettle', houses=[1,2,14,15])"
@@ -438,85 +370,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0c4d0e93-d359-49a2-8cea-b7fcb6758a64",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>aggregate</th>\n",
-       "      <th>kettle</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2013-12-17 17:24:18</th>\n",
-       "      <td>243</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-12-17 17:24:33</th>\n",
-       "      <td>244</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-12-17 17:24:48</th>\n",
-       "      <td>245</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-12-17 17:25:03</th>\n",
-       "      <td>249</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013-12-17 17:25:18</th>\n",
-       "      <td>241</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                     aggregate  kettle\n",
-       "time                                  \n",
-       "2013-12-17 17:24:18        243       0\n",
-       "2013-12-17 17:24:33        244       0\n",
-       "2013-12-17 17:24:48        245       0\n",
-       "2013-12-17 17:25:03        249       0\n",
-       "2013-12-17 17:25:18        241       0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "kettle.data[15].head()"
    ]
